--- a/inventory.ini
+++ b/inventory.ini
@@ -1,11 +1,8 @@
-[nifi]
-nifi1 ansible_host=192.168.1.10
-nifi2 ansible_host=192.168.1.11
+[nifi_cluster]
+nifi-vm1 ansible_host=10.211.55.28
+nifi-vm2 ansible_host=10.211.55.27
 
-[zookeeper]
-zookeeper1 ansible_host=192.168.1.20
-zookeeper2 ansible_host=192.168.1.21
-zookeeper3 ansible_host=192.168.1.22
-
-[all:vars]
-ansible_user=your_username  # Замените на ваше имя пользователя
+[zookeeper_cluster]
+zookeeper-vm1 ansible_host=10.211.55.19
+zookeeper-vm2 ansible_host=10.211.55.22
+zookeeper-vm3 ansible_host=10.211.55.26
